[gd_scene load_steps=5 format=3 uid="uid://dtv363hjjk5om"]

[ext_resource type="Script" uid="uid://c7c3q7sykilaq" path="res://ui/tab_toolbar.gd" id="1_uxvqo"]
[ext_resource type="Texture2D" uid="uid://n5o4avv1c0uw" path="res://assets/icons/Visuals.svg" id="2_n3qjt"]
[ext_resource type="Texture2D" uid="uid://mjptgkn04dua" path="res://assets/icons/Reference.svg" id="3_2hiq7"]
[ext_resource type="Texture2D" uid="uid://caqp5d6yikh1g" path="res://assets/icons/Snap.svg" id="4_1k2cq"]

[node name="TabToolbar" type="PanelContainer"]
custom_minimum_size = Vector2(0, 32)
script = ExtResource("1_uxvqo")

[node name="ViewportOptions" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="LeftMenu" type="HBoxContainer" parent="ViewportOptions"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = 5

[node name="Visuals" type="Button" parent="ViewportOptions/LeftMenu"]
layout_mode = 2
size_flags_horizontal = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
icon = ExtResource("2_n3qjt")
icon_alignment = 1

[node name="Reference" type="Button" parent="ViewportOptions/LeftMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "Toggle contam"
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
icon = ExtResource("3_2hiq7")
icon_alignment = 1

[node name="Snapping" type="HBoxContainer" parent="ViewportOptions/LeftMenu"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SnapButton" type="Button" parent="ViewportOptions/LeftMenu/Snapping"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
toggle_mode = true
icon = ExtResource("4_1k2cq")

[node name="ZoomContainer" type="HBoxContainer" parent="ViewportOptions"]
layout_mode = 2
size_flags_horizontal = 10

[node name="ZoomOutButton" type="Button" parent="ViewportOptions/ZoomContainer"]
layout_mode = 2
focus_mode = 0
theme_type_variation = &"IconButton"
text = "-"

[node name="ZoomLabel" type="Label" parent="ViewportOptions/ZoomContainer"]
layout_mode = 2
text = "100%"

[node name="ZoomInButton" type="Button" parent="ViewportOptions/ZoomContainer"]
layout_mode = 2
focus_mode = 0
theme_type_variation = &"IconButton"
text = "+"

[connection signal="pressed" from="ViewportOptions/LeftMenu/Reference" to="." method="_on_reference_pressed"]
